# sflex_development

./: .project  README.md  configure  configure.ac
contribs/cray/slurmsmwd/: slurmsmwd.service
contribs/perlapi/libslurm/perl/: MYMETA.json  MYMETA.yml  Slurm.c
contribs/perlapi/libslurmdb/perl/: MYMETA.json  MYMETA.yml  Slurmdb.c  const-xs.inc
doc/man/man1/: sacct.html  sacctmgr.html  salloc.html  sattach.html  sbatch.html  sbcast.html  scancel.html  scontrol.html  scrontab.html  scrun.html  sdiag.html  sinfo.html  sprio.html  squeue.html  sreport.html  srun.html  sshare.html  sstat.html  strigger.html  sview.html
doc/man/man5/: acct_gather.conf.html  burst_buffer.conf.html  cgroup.conf.html  ext_sensors.conf.html  gres.conf.html  helpers.conf.html  job_container.conf.html  knl.conf.html  mpi.conf.html  nonstop.conf.html  oci.conf.html  slurm.conf.html  slurmdbd.conf.html  topology.conf.html
doc/man/man8/: slurmctld.html  slurmd.html  slurmdbd.html  slurmrestd.html  slurmstepd.html  spank.html
etc/: slurmrestd.service
src/plugins/job_submit/: Makefile.am  Makefile.in
src/plugins/job_submit/sflex/: Makefile.am  Makefile.in  job_submit_sflex.c
src/plugins/openapi/dbv0.0.37/: openapi.bino
src/plugins/openapi/dbv0.0.38/: openapi.bino
src/plugins/openapi/dbv0.0.39/: openapi.bino
src/plugins/openapi/v0.0.37/: openapi.bino
src/plugins/openapi/v0.0.38/: openapi.bino
src/plugins/openapi/v0.0.39/: openapi.bino
src/sacctmgr/: usage.bino
src/scontrol/: usage.bino
src/scrontab/: usage.bino
testsuite/: testsuite.conf.sample
(+5 files in other folders)
